--- a/src/index.css
+++ b/src/index.css
@@ -6,27 +6,35 @@
   font-family: "Sk-Modernist-Regular";
   src: url("./assets/fonts/Sk-Modernist-Regular.otf") format("truetype");
 }
+
 @font-face {
   font-family: "Sk-Modernist-Bold";
   src: url("./assets/fonts/Sk-Modernist-Bold.otf") format("truetype");
 }
+
 .Sk-Modernist {
   font-family: "Sk-Modernist-Regular", sans-serif;
 }
+
 .Sk-Modernist-Bold {
   font-family: "Sk-Modernist-Bold", sans-serif;
 }
+
 html {
   font-size: 18px;
-  overflow-wrap: break-word; /* Allows breaking long words */
-  white-space: normal; /* Allows normal wrapping */
+  overflow-wrap: break-word;
+  /* Allows breaking long words */
+  white-space: normal;
+  /* Allows normal wrapping */
 }
+
 body {
   @apply font-sans text-base;
   font-weight: 200;
   margin: 0;
   padding: 0;
 }
+
 /* Home Page customization*/
 /* Custom text size */
 .hello-text {
@@ -36,6 +44,7 @@ body {
   font-weight: 500;
   line-height: normal;
 }
+
 .intro-text {
   color: #000;
   font-size: 16px;
@@ -43,6 +52,7 @@ body {
   font-weight: 400;
   line-height: normal;
 }
+
 .casestudy-title-text {
   color: #000;
   font-size: 36px;
@@ -50,6 +60,7 @@ body {
   font-weight: 500;
   line-height: normal;
 }
+
 .casestudy-p-text {
   color: #000;
   font-size: 16px;
@@ -57,6 +68,7 @@ body {
   font-weight: 300;
   line-height: normal;
 }
+
 .tag-text {
   color: #000;
   text-align: center;
@@ -65,6 +77,7 @@ body {
   font-weight: 500;
   line-height: normal;
 }
+
 .button-text {
   color: #000;
   text-align: center;
@@ -73,6 +86,7 @@ body {
   font-weight: 400;
   line-height: normal;
 }
+
 /*HomePage*/
 .tag-box-1 {
   display: flex;
@@ -83,6 +97,7 @@ body {
   border-radius: 110px;
   background: rgba(61, 55, 189, 0.5);
 }
+
 .tag-box-2 {
   display: flex;
   padding: 6px 15px;
@@ -92,6 +107,7 @@ body {
   border-radius: 110px;
   background: #f5f1e9;
 }
+
 .tag-box-3 {
   display: flex;
   padding: 6px 15px;
@@ -101,6 +117,7 @@ body {
   border-radius: 110px;
   background: rgba(195, 254, 246, 0.5);
 }
+
 .button-box {
   padding: 12px 20px;
   justify-content: center;
@@ -109,6 +126,7 @@ body {
   background: #e9e9ea;
   border-radius: 110px;
 }
+
 .button-box:hover {
   background: black;
   color: white;
@@ -118,6 +136,7 @@ body {
   transition-timing-function: linear;
   cursor: pointer;
 }
+
 .nav-item {
   font-style: normal;
   font-weight: 300;
@@ -126,6 +145,7 @@ body {
   transition: padding-left 0.3s ease;
   cursor: pointer;
 }
+
 .nav-item::before {
   content: "";
   position: absolute;
@@ -137,13 +157,16 @@ body {
   background-color: black;
   transition: width 0.3s ease;
 }
+
 .nav-item:hover {
   padding-left: 2.25rem;
   font-weight: 500;
 }
+
 .nav-item:hover::before {
   width: 1.88rem;
 }
+
 .nav-item-active {
   font-weight: 500;
   padding-left: 2.25rem;
@@ -151,6 +174,7 @@ body {
   line-height: normal;
   font-style: normal;
 }
+
 .nav-item-active::before {
   content: "";
   position: absolute;
@@ -160,12 +184,11 @@ body {
   height: 1.6px;
   background-color: black;
 }
+
 /* Animations */
 @layer components {
   .socials-icon {
-    @apply relative flex items-center justify-center w-8 h-8
-     bg-icon-gray bg-opacity-45 text-white hover:bg-opacity-75 
-     rounded-3xl hover:rounded-lg transition-all duration-300 ease-linear cursor-pointer;
+    @apply relative flex items-center justify-center w-8 h-8 bg-icon-gray bg-opacity-45 text-white hover:bg-opacity-75 rounded-3xl hover:rounded-lg transition-all duration-300 ease-linear cursor-pointer;
   }
 }
 
@@ -174,6 +197,7 @@ body {
   will-change: filter;
   transition: filter 300ms;
 }
+
 .reactLogo:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -182,10 +206,12 @@ body {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .reactLogo {
     animation: reactLogo-spin infinite 20s linear;
@@ -196,6 +222,7 @@ body {
 .casestudy-text {
   @apply: text-[18px];
 }
+
 .big-text {
   @apply text-[32px] md:text-[42px];
 }
@@ -211,12 +238,14 @@ body {
   cursor: pointer;
   white-space: nowrap;
 }
+
 .sidebar-item:hover {
   @apply Sk-Modernist-Bold;
   font-size: 16px;
   font-weight: 500;
   white-space: nowrap;
 }
+
 .sidebar-item-active {
   @apply Sk-Modernist-Bold;
   font-size: 16px;
@@ -225,6 +254,7 @@ body {
   font-style: normal;
   white-space: nowrap;
 }
+
 .icon-enter {
   transform: translateY(0);
   opacity: 1;
@@ -257,46 +287,52 @@ body {
 }
 
 .tag-container {
-  @apply grid grid-cols-2 px-8 md:flex md:flex-row md:px-24 md:gap-48 
-  justify-center items-start;
+  @apply grid grid-cols-2 px-8 md:flex md:flex-row md:px-24 md:gap-48 justify-center items-start;
 }
 
 .tag-container-sm {
-  @apply grid grid-cols-2 px-8 md:flex md:flex-row md:px-24 md:gap-32 
-  justify-center items-start;
+  @apply grid grid-cols-2 px-8 md:flex md:flex-row md:px-24 md:gap-32 justify-center items-start;
 }
+
 .tag-container p {
   @apply text-[14px] md:text-[18px];
 }
+
 .main-container {
   @apply mx-4 md:mx-9 justify-center;
   z-index: 1;
 }
+
 .main-container-background {
   background-color: white;
   position: relative;
   z-index: 2;
 }
+
 .project-tag {
   @apply text-[16px] md:text-[20px] mb-2 mt-6 md:mb-4 md:mt-12;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
+
 .project-tag-sm {
   @apply text-[16px] md:text-[18px] mb-2 mt-[54px] md:mb-4 md:mt-12;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
+
 .section-container {
   @apply main-container md:px-[242px];
   margin-bottom: 96px;
 }
+
 .section-container-wide {
   @apply main-container md:px-[96px];
   margin-bottom: 96px;
 }
+
 .section-title {
   @apply text-[36px];
   font-weight: 500;
@@ -317,6 +353,7 @@ blockquote {
   font-weight: 500;
   line-height: normal;
 }
+
 blockquote footer {
   @apply md:text-[18px] text-[14px];
   font-style: normal;
@@ -324,10 +361,12 @@ blockquote footer {
   line-height: normal;
   text-align: right;
 }
+
 .callout {
   border: 1px solid black;
   @apply my-[36px] py-[18px] px-[20px];
 }
+
 .callout-sm {
   @apply callout md:mx-[112px];
 }
@@ -335,44 +374,55 @@ blockquote footer {
 .section-gray-background {
   background-color: #e9e9ea;
 }
+
 .process-container {
   @apply grid grid-cols-2 md:flex md:flex-row justify-center md:gap-24 items-start;
 }
+
 .image-text-container-l {
   @apply md:flex md:flex-row;
 }
+
 .image-text-container-r {
   @apply md:flex md:flex-row;
 }
+
 .image-container-l {
   @apply md:w-2/3 md:pr-28 md:max-w-[694px] max-w-full;
 }
+
 .image-container-r {
   @apply md:w-2/3 md:pl-28 md:max-w-[694px] max-w-full;
 }
+
 .small-title {
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
 }
+
 .sub-section-container {
   margin-bottom: 64px;
 }
+
 .sub-section-title {
   font-size: 28px;
   margin-bottom: 36px;
   font-weight: 500;
 }
+
 ul.bullet-points {
   list-style-type: disc;
   padding-left: 24px;
 }
+
 .video-responsive {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
 }
+
 .video-responsive iframe {
   position: absolute;
   top: 0;
@@ -384,15 +434,30 @@ ul.bullet-points {
 .title-red {
   @apply text-[#E72000] text-[24px] Sk-Modernist-Bold;
 }
+
 .subtitle-bold {
   @apply Sk-Modernist-Bold text-[28px];
 }
+
 .callout-round {
   border-radius: 20px;
   background: #f2f2f7;
 }
+
 .callout-round-transparent {
   border-radius: 20px;
   border: 1.7px solid #000;
   @apply py-[42px] px-[22px] md:max-w-[275px] text-center;
+}
+
+.catalog-text {
+  @apply text-[14px] text-[#828285] Sk-Modernist-Bold;
+}
+
+.catalog-text-red {
+  @apply text-[14px] text-[#E72000] Sk-Modernist-Bold;
+}
+
+.catalog-text:hover {
+  @apply catalog-text-red;
 }
